feat:Exercicios aula 4